--- a/styles.css
+++ b/styles.css
@@ -1,178 +1,218 @@
-/* GENERAL RESET  */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+ /* GENERAL RESET  */
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
 
-/* VARIABLES  */
-:root {
-    --MAINBG-CLR: #0F1624;
-    --BLACK-CLR: #000;
-    --WHITE-CLR: #fff;
-    --LIGHT-WHITE-CLR: rgba(97, 92, 92, 0.331);
-    --LIGHT-FILTER: rgba(152, 154, 152, 0.3);
-}
+ * {
+     margin: 0;
+     padding: 0;
+     box-sizing: border-box;
+ }
 
-/* GENERAL STYLING  */
-body {
-    min-height: 100dvh;
-    display: flex;
-    flex-direction: column;
-    background: var(--MAINBG-CLR);
-}
+ /* VARIABLES  */
+ :root {
+     --MAINBG-CLR: #0F1624;
+     --BLACK-CLR: #000;
+     --WHITE-CLR: #fff;
+     --LIGHT-WHITE-CLR: rgba(97, 92, 92, 0.331);
+     --LIGHT-FILTER: rgba(152, 154, 152, 0.3);
+ }
 
-html {
-    scroll-behavior: smooth;
-}
+ /* GENERAL STYLING  */
+ body {
+     min-height: 100vh;
+     display: flex;
+     flex-direction: column;
+     background: var(--MAINBG-CLR);
+     line-height: 1.3;
+     font-family: 'Poppins', sans-serif;
+ }
 
-img {
-    display: block;
-    max-width: 100%;
-}
+ html {
+     scroll-behavior: smooth;
+ }
 
-/* NAVIGATION  */
-nav {
-    padding-block: 4px 10px;
-    position: fixed;
-    width: 100%;
-    background-color: var(--MAINBG-CLR);
-}
+ img {
+     display: block;
+     max-width: 100%;
+ }
 
-nav {
-    border-bottom: 1px solid var(--LIGHT-WHITE-CLR);
-}
+ /* NAVIGATION  */
+ nav {
+     padding-block: 4px 10px;
+     position: fixed;
+     width: 100%;
+     background-color: var(--MAINBG-CLR);
+ }
 
-.overlay,
-.open {
-    display: none;
-}
+ nav {
+     border-bottom: 1px solid var(--LIGHT-WHITE-CLR);
+ }
 
-.topnav {
-    display: flex;
-    justify-content: space-between;
-    width: min(100% - 9vw, 1200px);
-    margin-inline: auto;
-}
+ .overlay,
+ .open {
+     display: none;
+ }
 
-.logo img {
-    cursor: pointer;
-    padding-top: 4px;
-    width: 40px;
-    border-radius: 50%;
-}
+ .topnav {
+     display: flex;
+     justify-content: space-between;
+     width: min(100% - 12vw, 1200px);
+     margin-inline: auto;
+ }
 
-nav a,
-.overlay_content a {
-    text-transform: capitalize;
-    font-family: Arial, Helvetica, sans-serif;
-    color: var(--WHITE-CLR);
-}
+ .logo img {
+     cursor: pointer;
+     padding-top: 4px;
+     width: 40px;
+     border-radius: 50%;
+ }
 
+ nav a,
+ .overlay_content a {
+     text-transform: capitalize;
+     text-transform: capitalize;
+     font-family: Arial, Helvetica, sans-serif;
+     color: var(--WHITE-CLR);
+ }
 
+ .topnav ul a:hover {
+     padding-bottom: 20px;
+     border-bottom: 2px solid var(--WHITE-CLR);
+ }
 
-.topnav ul a:hover {
-    padding-bottom: 20px;
-    border-bottom: 2px solid var(--WHITE-CLR);
-}
+ nav ul,
+ .overlay_content ul {
+     padding-top: 12px;
+     display: flex;
+     align-items: center;
+     gap: 3rem;
+ }
 
-nav ul,
-.overlay_content ul {
-    padding-top: 12px;
-    display: flex;
-    align-items: center;
-    gap: 3rem;
-}
+ nav li,
+ .overlay_content li {
+     list-style: none;
+ }
 
-nav li,
-.overlay_content li {
-    list-style: none;
-}
+ nav a,
+ .overlay_content a {
+     text-decoration: none;
+ }
 
-nav a,
-.overlay_content a {
-    text-decoration: none;
-}
+ .icon ul {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     gap: 12px;
+     padding-top: 20px;
+ }
 
-.icon ul {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 12px;
-    padding-top: 20px;
-}
+ /* MAIN  */
+ main {
+     z-index: -1;
+     width: min(100% - 12vw, 1200px);
+     margin-inline: auto;
+     position: relative;
+ }
 
+ .about {
+     margin-top: 4rem;
+ }
 
-@media screen and (max-width: 560px) {
-    nav ul {
-        display: none;
-    }
+ .about h1 {
+     font-size: 3rem;
+     color: var(--WHITE-CLR);
+     text-transform: capitalize;
+ }
 
-    nav ul {
-        gap: 2rem;
-    }
+ article {
+     display: flex;
+     justify-content: space-between;
+ }
 
-    .all {
-        position: absolute;
-        width: 100%;
-        top: 58px;
-        z-index: 1;
-        height: 100vh;
-        background-color: transparent;
-    }
+ .about h3 {
+     font-size: 2rem;
+     color: var(--WHITE-CLR);
+ }
 
-    .overlay {
-        width: min(100% - 9vw, 1200px);
-        margin-inline: auto;
-        display: flex;
-        position: fixed;
-        justify-content: space-between;
-        width: 0;
-        height: 100vh;
-        background-color: rgba(13, 22, 46, 0.785);
-        backdrop-filter: blur(5px);
-        position: fixed;
-        right: 0;
-        top: 62px;
-        transition: .3s all linear;
-    }
+ .name {
+     font-weight: 900;
+     font-family: cursive;
+ }
 
-    .overlay_content {
-        position: relative;
-    }
+ .about p {
+     color: var(--WHITE-CLR);
+     font-size: 1rem;
+ }
 
-    .overlay_content ul {
-        flex-direction: column;
-        position: absolute;
-        left: 60px;
-        top: 50px;
-        gap: 3rem;
-    }
+ @media screen and (max-width: 560px) {
+     nav ul {
+         display: none;
+     }
 
-    .open {
-        position: fixed;
-        top: 20px;
-        right: 10px;
-        display: block;
-        width: 40px;
-    }
+     nav ul {
+         gap: 2rem;
+     }
 
-    .iconSm i {
-        color: var(--WHITE-CLR);
-        padding-bottom: 10px;
-        font-size: 1rem;
-    }
+     .all {
+         position: absolute;
+         width: 100%;
+         top: 58px;
+         height: 100vh;
+         background-color: transparent;
+         z-index: 1;
+     }
 
-    .iconSm {
-        top: 40%;
-        position: fixed;
-    }
+     .overlay {
+         width: min(100% - 9vw, 1200px);
+         margin-inline: auto;
+         display: flex;
+         position: fixed;
+         justify-content: space-between;
+         width: 0;
+         height: 100vh;
+         background-color: rgba(13, 22, 46, 0.785);
+         backdrop-filter: blur(5px);
+         position: fixed;
+         right: 0;
+         top: 62px;
+         transition: .3s all linear;
+     }
 
-    main {
-        position: relative;
-    }
+     .overlay_content {
+         position: relative;
+     }
 
-    .icon {
-        display: none;
-    }
-}
+     .overlay_content ul {
+         flex-direction: column;
+         position: absolute;
+         left: 60px;
+         top: 50px;
+         gap: 3rem;
+     }
+
+     .open {
+         position: fixed;
+         top: 20px;
+         right: 10px;
+         display: block;
+         width: 40px;
+     }
+
+     .iconSm i {
+         color: var(--WHITE-CLR);
+         padding-bottom: 10px;
+         font-size: 1rem;
+     }
+
+     .iconSm {
+         top: 40%;
+         position: fixed;
+     }
+
+     main {
+         position: relative;
+     }
+
+     .icon {
+         display: none;
+     }
+ }
