--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,21 @@
 
  /* VARIABLES  */
  :root {
-     --MAINBG-CLR: #0F1624;
-     --BLACK-CLR: #000;
-     --WHITE-CLR: #fff;
+     --MAINBG-CLR: hsl(220, 41%, 10%);
+     --BLACK-CLR: hsl(0, 0%, 0%);
+     --WHITE-CLR: rgb(255, 255, 255);
      --LIGHT-WHITE-CLR: rgba(97, 92, 92, 0.331);
      --LIGHT-FILTER: rgba(152, 154, 152, 0.3);
-     --ABOUT-TEXT-CLR: #848181;
+     --ABOUT-TEXT-CLR: hsl(0, 1%, 51%);
+     --TECH-BG: hsl(220, 57%, 20%);
+     --LINEAR-GRD: linear-gradient(270deg, #13ADC7 0%, #6978D1 66.67%, #945DD6 100%);
+     /* FONT WEIGHT  */
+     --FW-400: 400;
+     --FW-500: 500;
+     --FW-600: 600;
+     --FW-700: 700;
+     --FW-800: 800;
+     --FW-900: 900;
  }
 
  /* GENERAL STYLING  */
@@ -77,6 +86,17 @@
  }
 
  .topnav ul a:hover {
+     padding-bottom: 20px;
+     border-bottom: 2px solid var(--LIGHT-FILTER);
+ }
+
+
+ .active {
+     padding-bottom: 20px;
+     border-bottom: 2px solid var(--WHITE-CLR);
+ }
+
+ .icon ul a:hover {
      padding-bottom: 20px;
      border-bottom: 2px solid var(--WHITE-CLR);
  }
@@ -165,15 +185,94 @@
      cursor: pointer;
      border: none;
      outline: none;
-     padding: .5rem .75rem;
+     padding: 12px 11px;
      border-radius: 10px;
+     border-radius: 9px;
+     background: var(--LINEAR-GRD);
+     color: var(--WHITE-CLR);
+     font-family: inherit;
+ }
+
+ .about button:hover {
+     filter: brightness(80%);
  }
 
  .btns {
      margin-top: 10px;
-
      display: flex;
      gap: 10px;
+ }
+
+ .download {
+     padding-left: 4px;
+     padding-bottom: 6px;
+ }
+
+ /* MAIN TECHNOLOGIES  */
+ .section_technologies {
+     margin-top: 6rem;
+ }
+
+ .course h1,
+ p {
+     color: var(--WHITE-CLR);
+     padding-inline: 14px;
+     font-family: inherit;
+ }
+
+ .course {
+     margin-top: 4rem;
+     display: flex;
+     justify-content: space-between;
+ }
+
+ .th_c {
+     position: relative;
+     width: 100%;
+     height: 15px;
+     border-radius: 83px;
+     background-color: var(--TECH-BG);
+     overflow: hidden;
+ }
+
+ .th_layer_high {
+     position: absolute;
+     width: 85%;
+     height: 15px;
+     top: 0;
+     border-radius: 83px;
+     background: repeating-linear-gradient(270deg, #13ADC7 0%, #6978D1 66.67%, #945DD6 100%);
+ }
+
+ .th_layer_inter {
+     position: absolute;
+     width: 65%;
+     height: 15px;
+     top: 0;
+     border-radius: 83px;
+     background: repeating-linear-gradient(270deg, #13ADC7 0%, #6978D1 66.67%, #945DD6 100%);
+ }
+
+ .th_layer_beginner {
+     position: absolute;
+     width: 35%;
+     height: 15px;
+     top: 0;
+     border-radius: 83px;
+     background: repeating-linear-gradient(270deg, #13ADC7 0%, #6978D1 66.67%, #945DD6 100%);
+ }
+
+ .technology {
+     display: flex;
+     flex-direction: column;
+     margin-top: -2rem;
+ }
+
+ .section_technologies h1 {
+     text-transform: capitalize;
+     color: var(--WHITE-CLR);
+     font-weight: var(--FW-900);
+     font-size: 2.5rem;
  }
 
  @media screen and (max-width: 768px) {
@@ -183,6 +282,27 @@
 
      .section_about_text h3 {
          font-size: 1.75rem;
+     }
+ }
+
+
+ @media screen and (max-width: 768px) {
+     article {
+         flex-direction: column-reverse;
+     }
+
+     .btns {
+         align-items: center;
+         justify-content: center;
+     }
+
+     .section_about_text {
+         text-align: center;
+         width: 100%;
+     }
+
+     nav ul {
+         gap: 2rem;
      }
  }
 
@@ -289,6 +409,12 @@
          align-items: center;
          justify-content: center;
      }
+
+     /* TECHNOLOGIES  */
+     .course h1,
+     p {
+        font-size: 14px;
+    }
  }
 
  @media screen and (max-width: 480px) {}
