--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,20 @@
      font-family: inherit;
  }
 
+ .hire_btn  {
+     cursor: pointer;
+     border: none;
+     outline: none;
+     padding: 12px 11px;
+     border-radius: 10px;
+     border-radius: 9px;
+     background: var(--LINEAR-GRD);
+     color: var(--WHITE-CLR);
+     font-family: inherit;
+     text-decoration: none;
+     color: var(--WHITE-CLR);
+ }
+
  .about button:hover {
      filter: brightness(80%);
  }
