--- a/styles.css
+++ b/styles.css
@@ -635,6 +635,10 @@
 
      }
 
+     .overlay.activeNav {
+         width: 230px;
+     }
+
      .overlay {
          z-index: 101;
          width: min(100% - 9vw, 1200px);
@@ -673,7 +677,7 @@
          right: 10px;
          display: block;
          width: 40px;
-     }
+     } */
 
      .iconSm i {
          color: var(--WHITE-CLR);
