--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,11 @@
  }
 
  /* GENERAL STYLING  */
+
+ .hide {
+     display: none;
+ }
+
  body {
      overflow-x: hidden;
      min-height: 100vh;
@@ -70,6 +75,10 @@
      border-bottom: 1px solid var(--LIGHT-WHITE-CLR);
  }
 
+ .iconSm {
+     display: none;
+ }
+
  .overlay,
  .open {
      display: none;
@@ -105,11 +114,11 @@
 
  .active {
      border-bottom: 2px solid var(--WHITE-CLR);
-     padding-bottom: 20px;
+     padding-bottom: 14px;
  }
 
  .icon ul a:hover {
-     padding-bottom: 20px;
+     padding-bottom: 10px;
      border-bottom: 2px solid var(--WHITE-CLR);
  }
 
@@ -139,6 +148,14 @@
      padding-top: 20px;
  }
 
+ .topnav ul a {
+     padding: 30px 0;
+ }
+
+ .topnav ul a:first-child {
+     padding: 14px 0;
+ }
+
  /* MAIN  */
  main {
      width: min(100% - 12vw, 1200px);
@@ -150,11 +167,15 @@
      margin-top: 4rem;
  }
 
+ .about p {
+     padding-inline: 0;
+ }
 
  article {
      display: flex;
      align-items: center;
      gap: 4rem;
+     margin-top: 8rem !important;
  }
 
  .section_about_text {
@@ -360,6 +381,65 @@
      background-color: var(--TECH-BG);
      overflow: hidden;
      animation: th_canime 5s;
+ }
+
+ /* LOADER ANIMATION  */
+
+ .spinner {
+     width: 24px;
+     height: 24px;
+     border-radius: 50%;
+     border: 3.8px solid #474bff;
+     animation: spinner-bulqg1 0.6400000000000001s infinite linear alternate,
+         spinner-oaa3wk 1.2800000000000002s infinite linear;
+ }
+
+ @keyframes spinner-bulqg1 {
+     0% {
+         clip-path: polygon(50% 50%, 0 0, 50% 0%, 50% 0%, 50% 0%, 50% 0%, 50% 0%);
+     }
+
+     12.5% {
+         clip-path: polygon(50% 50%, 0 0, 50% 0%, 100% 0%, 100% 0%, 100% 0%, 100% 0%);
+     }
+
+     25% {
+         clip-path: polygon(50% 50%, 0 0, 50% 0%, 100% 0%, 100% 100%, 100% 100%, 100% 100%);
+     }
+
+     50% {
+         clip-path: polygon(50% 50%, 0 0, 50% 0%, 100% 0%, 100% 100%, 50% 100%, 0% 100%);
+     }
+
+     62.5% {
+         clip-path: polygon(50% 50%, 100% 0, 100% 0%, 100% 0%, 100% 100%, 50% 100%, 0% 100%);
+     }
+
+     75% {
+         clip-path: polygon(50% 50%, 100% 100%, 100% 100%, 100% 100%, 100% 100%, 50% 100%, 0% 100%);
+     }
+
+     100% {
+         clip-path: polygon(50% 50%, 50% 100%, 50% 100%, 50% 100%, 50% 100%, 50% 100%, 0% 100%);
+     }
+ }
+
+ @keyframes spinner-oaa3wk {
+     0% {
+         transform: scaleY(1) rotate(0deg);
+     }
+
+     49.99% {
+         transform: scaleY(1) rotate(135deg);
+     }
+
+     50% {
+         transform: scaleY(-1) rotate(0deg);
+     }
+
+     100% {
+         transform: scaleY(-1) rotate(-135deg);
+     }
  }
 
  @keyframes th_canime {
@@ -648,6 +728,18 @@
  }
 
  /* POPUP MESSAGE  */
+
+ .sending,
+ .sent {
+     display: flex;
+     align-items: center;
+     flex-direction: column;
+ }
+
+ .sent {
+     display: none;
+ }
+
  .popup {
      position: relative;
      left: 55%;
@@ -670,6 +762,11 @@
      overflow: hidden;
  }
 
+
+ .fa-circle-check {
+     color: #1ee47e;
+ }
+
  .pop_content {
      background-color: var(--WHITE-CLR);
      padding: 20px;
@@ -690,6 +787,11 @@
  .popmenu_btn a {
      text-decoration: none;
      color: var(--WHITE-CLR);
+ }
+
+ .popmenu_btn {
+     display: flex;
+     flex-direction: column;
  }
 
  .popmenu_btn {
@@ -722,6 +824,8 @@
      .project_section {
          grid-template-columns: repeat(auto-fill, minmax(400px, 2fr));
      }
+
+
  }
 
  @media screen and (max-width: 768px) {
@@ -733,6 +837,7 @@
          font-size: 1.75rem;
      }
  }
+
 
 
  @media screen and (max-width: 768px) {
@@ -792,7 +897,7 @@
          backdrop-filter: blur(5px);
          position: fixed;
          right: 0;
-         top: 61px;
+         top: 55px;
          transition: .3s all linear;
      }
 
@@ -818,13 +923,14 @@
          width: 40px;
      }
 
-     */ .iconSm i {
+     .iconSm i {
          color: var(--WHITE-CLR);
          padding-bottom: 10px;
          font-size: 1rem;
      }
 
      .iconSm {
+         display: block;
          top: 40%;
          position: fixed;
      }
@@ -833,8 +939,8 @@
 
      article {
          flex-direction: column;
-         padding-top: 3rem;
      }
+
 
      .icon {
          display: none;
@@ -892,7 +998,7 @@
 
      .popup {
          position: relative;
-         left: 55%;
+         left: 50%;
          bottom: -200px;
          width: 290px;
      }
